# aircade-api

./: .dockerignore  .env.example  CLAUDE.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  quickstart.md  railway.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  railway-deploy.yml
docs/: milestones.md  quickstart.md  railway_deployment.md  railway_quickstart.md
docs/milestones_implementation_summaries/: v0.0.0_deployment.md  v0.1.0.md
migration/: Cargo.toml
migration/src/: lib.rs  m20251218_000001_init.rs  m20260208_000001_create_user_table.rs  m20260208_000002_create_auth_provider_table.rs  m20260208_000003_create_refresh_token_table.rs  m20260209_000001_create_game_table.rs  m20260209_000002_create_game_version_table.rs  m20260209_000003_create_session_table.rs  m20260209_000004_create_player_table.rs  m20260209_000005_seed_pong_game.rs  m20260209_000006_create_game_asset_table.rs  m20260209_000007_create_tag_table.rs  m20260209_000008_create_game_tag_table.rs  m20260209_000009_seed_tags.rs  m20260210_000001_update_game_version_table.rs
scripts/: railway-setup.bat  railway-setup.sh  seed.sql
src/: api.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
src/auth/: jwt.rs  middleware.rs  mod.rs  oauth.rs  password.rs
src/config/: mod.rs
src/db/: mod.rs
src/dto/: game.rs  mod.rs  player.rs
src/entities/: auth_provider.rs  game.rs  game_asset.rs  game_status.rs  game_tag.rs  game_version.rs  games.rs  mod.rs  player.rs  players.rs  refresh_token.rs  session.rs  tag.rs  user.rs  users.rs
src/errors/: mod.rs
src/migrations/: m20250124_000001_create_users_table.rs  m20250124_000002_create_games_table.rs  m20250124_000003_create_players_table.rs  mod.rs
src/routes/: auth.rs  games.rs  health.rs  mod.rs  sessions.rs  users.rs
src/services/: game_service.rs  mod.rs  player_service.rs
src/sessions/: mod.rs
src/utils/: color.rs  game_code.rs  mod.rs
tests/: auth_middleware_test.rs  auth_test.rs  games_integration.rs  games_test.rs  health_check.rs  health_test.rs  integration.rs  sessions_test.rs  users_test.rs
tests/common/: mod.rs
