[workspace]
members = [".", "migration"]

[package]
name = "aircade-api"
version = "0.3.0"
edition = "2024"
description = "Backend API for AirCade - a browser-based party game platform"
license = "MIT"
repository = "https://github.com/aircade-org/aircade-api"
keywords = ["game", "api", "websocket", "party-game"]
categories = ["games", "web-programming"]

# ==================================================================================================
# Linting Configuration
# ==================================================================================================

[lints.rust]
unsafe_code = { level = "forbid" } # Forbid unsafe code entirely for memory safety

[lints.clippy]
all = { level = "deny", priority = -1 }       # Enable all standard Clippy lints as errors
pedantic = { level = "warn", priority = -1 }  # Extra pedantic lints for code quality
nursery = { level = "warn", priority = -1 }   # Experimental lints (may have false positives)
cargo = { level = "warn", priority = -1 }     # Cargo-specific lints (dependencies, features)
multiple_crate_versions = { level = "allow" } # Allow multiple versions of same crate (common in large projects)
unwrap_used = { level = "deny" }              # Forbid .unwrap() to enforce proper error handling
expect_used = { level = "deny" }              # Forbid .expect() to enforce proper error handling
panic = { level = "deny" }                    # Forbid panic!() macro to ensure graceful error handling

# ==================================================================================================
# Build Profiles
# ==================================================================================================

[profile.dev]
opt-level = 1 # Basic optimizations for faster dev iteration while maintaining decent performance

[profile.release]
opt-level = 3           # Maximum optimizations for best runtime performance
lto = "fat"             # Link-Time Optimization across all crates (smaller binary, better perf)
codegen-units = 1       # Single codegen unit for better optimization (slower compile, faster runtime)
strip = true            # Strip debug symbols for smaller binary (~30-40% reduction)
panic = "abort"         # Abort on panic instead of unwinding (smaller binary, no cleanup)
incremental = false     # Disable incremental compilation for clean release builds
overflow-checks = false # Disable overflow checks for maximum performance (use with caution!)

# ==================================================================================================
# Code Dependencies
# ==================================================================================================

[dependencies]
# Web Framework & Server
axum = { version = "0.8", features = ["default", "multipart", "ws"] } # Modern web framework built on Tokio/Tower
tower = { version = "0.5", features = [] }                      # Middleware and service abstractions
tower-http = { version = "0.6", features = ["cors", "trace"] }  # HTTP middleware (CORS, logging, etc.)

# Async Runtime
tokio = { version = "1.49", features = ["full"] } # Async runtime for non-blocking I/O

# Database & ORM
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",        # PostgreSQL support via SQLx
    "sqlx-sqlite",          # SQLite support for integration tests
    "runtime-tokio-rustls", # Tokio async runtime with TLS
    "macros"                # Macros to derive Entity/Model
] }
sea-orm-migration = { version = "1.1", features = ["default"] } # Migration system for SeaORM

# Serialization
serde = { version = "1.0", features = ["derive"] }       # Serialization framework
serde_json = { version = "1.0", features = ["default"] } # JSON support for Serde

# Error Handling & Logging
anyhow = { version = "1.0", features = ["default"] }                # Simplified error handling with context
tracing = { version = "0.1", features = ["default"] }               # Structured logging framework
tracing-subscriber = { version = "0.3", features = ["env-filter"] } # Tracing subscriber implementation

# Configuration
dotenvy = { version = "0.15", features = [] } # Load environment variables from .env files

# Authentication
jsonwebtoken = { version = "9.3", features = ["default"] } # JWT creation and validation
argon2 = { version = "0.5", features = ["default"] }       # Argon2id password hashing

# OAuth2
oauth2 = { version = "5.0", features = ["reqwest"] }                                       # OAuth2 client (Google, GitHub)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false } # HTTP client for OAuth token exchange

# Utilities
chrono = { version = "0.4", features = ["default"] }   # Date and time manipulation
async-trait = { version = "0.1", features = [] }       # Async traits for SeaORM migrations
rand = { version = "0.8", features = ["default"] }     # Random number generation for game codes
uuid = { version = "1.0", features = ["v4"] }          # UUID generation for entity identifiers
futures-util = { version = "0.3", features = [] }      # Stream utilities for WebSocket message handling
dashmap = { version = "6.1" }                          # Concurrent hash map for in-memory session connections
urlencoding = { version = "2.1", features = [] }       # URL encoding for OAuth redirect parameters

# Internal crates
migration = { path = "migration" } # SeaORM database migrations

# ==================================================================================================
# Test Dependencies
# ==================================================================================================

[dev-dependencies]
http-body-util = "0.1"                                          # Body collection utilities for testing Axum responses
tower = { version = "0.5", features = ["util"] }                # ServiceExt::oneshot for test requests
tokio-tungstenite = { version = "0.26", features = ["default"] } # WebSocket client for integration tests
futures-util = { version = "0.3", features = [] }               # Stream utilities for WebSocket test assertions
