[package]
name = "migration"
version = "0.1.0"
edition = "2024"
description = "Database migrations for AirCade API"
license = "MIT"
repository = "https://github.com/aircade-org/aircade-api"
readme = "../README.md"
keywords = ["migration", "database"]
categories = ["database"]
publish = false

[lints.rust]
unsafe_code = { level = "forbid" }

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
unwrap_used = { level = "deny" }
expect_used = { level = "deny" }
panic = { level = "deny" }

[dependencies]
sea-orm-migration = { version = "1.1", features = [
    "runtime-tokio-rustls",
    "sqlx-postgres",
    "sqlx-sqlite", # SQLite support for integration tests
] }
async-trait = "0.1"
tokio = { version = "1.49", features = ["full"] }
